@@ -1552,6 +1552,9 @@ expr_stmt|;
 name|doTestReplicateAfterStartup
 argument_list|()
 expr_stmt|;
+name|doTestReplicateAfterStartupWithNoActivity
+argument_list|()
+expr_stmt|;
 name|doTestIndexAndConfigAliasReplication
 argument_list|()
 expr_stmt|;
@@ -3804,6 +3807,369 @@ name|getLocalPort
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|doTestReplicateAfterStartupWithNoActivity
+specifier|private
+name|void
+name|doTestReplicateAfterStartupWithNoActivity
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|factory
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"solr.directoryFactory"
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"factory:"
+operator|+
+name|factory
+argument_list|)
+expr_stmt|;
+name|useFactory
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+comment|//stop slave
+name|slaveJetty
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|nDocs
+operator|--
+expr_stmt|;
+name|masterClient
+operator|.
+name|deleteByQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+expr_stmt|;
+name|masterClient
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+comment|//change solrconfig having 'replicateAfter startup' option on master
+name|master
+operator|.
+name|copyConfigFile
+argument_list|(
+name|CONF_DIR
+operator|+
+literal|"solrconfig-master2.xml"
+argument_list|,
+literal|"solrconfig.xml"
+argument_list|)
+expr_stmt|;
+name|masterJetty
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|masterJetty
+operator|=
+name|createJetty
+argument_list|(
+name|master
+argument_list|)
+expr_stmt|;
+name|masterClient
+operator|=
+name|createNewSolrServer
+argument_list|(
+name|masterJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|nDocs
+condition|;
+name|i
+operator|++
+control|)
+name|index
+argument_list|(
+name|masterClient
+argument_list|,
+literal|"id"
+argument_list|,
+name|i
+argument_list|,
+literal|"name"
+argument_list|,
+literal|"name = "
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
+name|masterClient
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+comment|// now we restart to test what happens with no activity before the slave tries to
+comment|// replicate
+name|masterJetty
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|masterJetty
+operator|.
+name|start
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+comment|//masterClient = createNewSolrServer(masterJetty.getLocalPort());
+name|NamedList
+name|masterQueryRsp
+init|=
+name|rQuery
+argument_list|(
+name|nDocs
+argument_list|,
+literal|"*:*"
+argument_list|,
+name|masterClient
+argument_list|)
+decl_stmt|;
+name|SolrDocumentList
+name|masterQueryResult
+init|=
+operator|(
+name|SolrDocumentList
+operator|)
+name|masterQueryRsp
+operator|.
+name|get
+argument_list|(
+literal|"response"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|nDocs
+argument_list|,
+name|masterQueryResult
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|slave
+operator|.
+name|setTestPort
+argument_list|(
+name|masterJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|slave
+operator|.
+name|copyConfigFile
+argument_list|(
+name|slave
+operator|.
+name|getSolrConfigFile
+argument_list|()
+argument_list|,
+literal|"solrconfig.xml"
+argument_list|)
+expr_stmt|;
+comment|//start slave
+name|slaveJetty
+operator|=
+name|createJetty
+argument_list|(
+name|slave
+argument_list|)
+expr_stmt|;
+name|slaveClient
+operator|=
+name|createNewSolrServer
+argument_list|(
+name|slaveJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|//get docs from slave and check if number is equal to master
+name|NamedList
+name|slaveQueryRsp
+init|=
+name|rQuery
+argument_list|(
+name|nDocs
+argument_list|,
+literal|"*:*"
+argument_list|,
+name|slaveClient
+argument_list|)
+decl_stmt|;
+name|SolrDocumentList
+name|slaveQueryResult
+init|=
+operator|(
+name|SolrDocumentList
+operator|)
+name|slaveQueryRsp
+operator|.
+name|get
+argument_list|(
+literal|"response"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|nDocs
+argument_list|,
+name|slaveQueryResult
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|//compare results
+name|String
+name|cmp
+init|=
+name|BaseDistributedSearchTestCase
+operator|.
+name|compare
+argument_list|(
+name|masterQueryResult
+argument_list|,
+name|slaveQueryResult
+argument_list|,
+literal|0
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|cmp
+argument_list|)
+expr_stmt|;
+comment|// NOTE: the master only replicates after startup now!
+comment|// revert that change.
+name|master
+operator|.
+name|copyConfigFile
+argument_list|(
+name|CONF_DIR
+operator|+
+literal|"solrconfig-master.xml"
+argument_list|,
+literal|"solrconfig.xml"
+argument_list|)
+expr_stmt|;
+name|masterJetty
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|masterJetty
+operator|=
+name|createJetty
+argument_list|(
+name|master
+argument_list|)
+expr_stmt|;
+name|masterClient
+operator|=
+name|createNewSolrServer
+argument_list|(
+name|masterJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|slave
+operator|.
+name|setTestPort
+argument_list|(
+name|masterJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|slave
+operator|.
+name|copyConfigFile
+argument_list|(
+name|slave
+operator|.
+name|getSolrConfigFile
+argument_list|()
+argument_list|,
+literal|"solrconfig.xml"
+argument_list|)
+expr_stmt|;
+comment|//start slave
+name|slaveJetty
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|slaveJetty
+operator|=
+name|createJetty
+argument_list|(
+name|slave
+argument_list|)
+expr_stmt|;
+name|slaveClient
+operator|=
+name|createNewSolrServer
+argument_list|(
+name|slaveJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|resetFactory
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|method|doTestReplicateAfterCoreReload
 specifier|private
